--- a/app/elements/scripts-list-element.html
+++ b/app/elements/scripts-list-element.html
@@ -19,6 +19,11 @@
       .flexchild {
         @apply(--layout-flex);
       }
+
+      .info-head > * {
+        font-weight: 700;
+        padding: 8px 0;
+      }
     </style>
 
     <paper-card heading="Scripts">
@@ -46,7 +51,7 @@
             </div>
           </div>
           <div class="info-body">
-            <iron-list items="[[sortedScripts]]" as="script" selected-items="{{selectedScripts}}" multi-selection>
+            <iron-list items="[[presentedScripts]]" as="script" selected-items="{{selectedScripts}}" multi-selection>
               <template>
                 <script-item-element selected="{{selected}}" script="[[script]]"></script-item-element>
               </template>
@@ -80,11 +85,7 @@
               return Mist.scripts;
             }
           },
-          filteredScripts: {
-            type: Array,
-            computed: '_computeFilteredScripts(scripts.*, searchTerm)'
-          },
-          sortedScripts: {
+          presentedScripts: {
             type: Array
           },
           selectedScript: {
@@ -133,7 +134,7 @@
         },
         observers: [
           '_scriptsChanged(scripts.*, selectedScripts.*)',
-          '_filteredScriptsChanged(filteredScripts.*, sortByTerm)'
+          '_presentedScriptsChanged(scripts.*, searchTerm, sortByTerm)'
         ],
         listeners: {
           'toggleSelectedScript': '_toggleSelectedScript',
@@ -147,16 +148,24 @@
             return name.indexOf(searchTerm) != -1;
           });
         },
-        _filteredScriptsChanged: function(filteredScripts, sortByTerm) {
-          var sortedScripts = [];
+        _presentedScriptsChanged: function(scripts, searchTerm, sortByTerm) {
+          var presentedScripts = [],
+            searchTerm = searchTerm.toLowerCase();
+
+          var filteredScripts = scripts.base.filter(function(script) {
+            var name = script.name.toLowerCase();
+            return name.indexOf(searchTerm) != -1;
+          });
+
           if (sortByTerm == 'name') {
-            sortedScripts = filteredScripts.base.sort(this._computeSort('name', 1));
+            presentedScripts = filteredScripts.sort(this._computeSort('name', 1));
           } else if (sortByTerm == 'type') {
-            sortedScripts = filteredScripts.base.sort(this._computeSort('type', 1));
+            presentedScripts = filteredScripts.sort(this._computeSort('type', 1));
           } else {
-            sortedScripts = filteredScripts.base;
+            presentedScripts = filteredScripts;
           }
-          this.set('sortedScripts', sortedScripts);
+
+          this.set('presentedScripts', presentedScripts);
           this.querySelector('iron-list').notifyResize();
         },
         _sortScripts: function(e) {
@@ -207,7 +216,6 @@
           } else {
             this.querySelector('iron-list').deselectItem(script);
           }
-          console.log(this.scripts, this.filteredScripts, this.selectedScripts);
         },
         _toggleSearchSelected: function() {
           var showSearchOption = !this.showSearchOption;
@@ -234,7 +242,6 @@
                 var index = this.scripts.indexOf(el);
                 this.splice('scripts', index, 1);
               }, this);
-              console.log(this.selectedScripts, this.scripts, this.sortedScripts);
             }
           }
         },
@@ -248,9 +255,10 @@
         },
         _updateSelectedScript: function(e) {
           var script = e.detail.script,
-            index = this.sortedScripts.indexOf(script);
-          this.set('sortedScripts.' + index + '.name', script.name);
-          this.set('sortedScripts.' + index + '.description', script.description);
+            index = this.scripts.indexOf(script);
+          this.set('scripts.' + index + '.name', script.name);
+          this.set('scripts.' + index + '.description', script.description);
+          this.querySelector('iron-list').selectItem(script);
         },
         _openAddScriptModal: function(e) {
           var el = this.querySelector('script-add-element');
