--- a/app/elements/dialog-element.html
+++ b/app/elements/dialog-element.html
@@ -90,12 +90,9 @@
         _modalClosed: function(e) {
           if (e.srcElement.id == 'dialogModal') {
             console.log(this.$.dialogModal.closingReason);
-            this.fire('iron-signal', {
-              name: 'confirmation',
-              data: {
-                response: this.$.dialogModal.closingReason,
-                reason: this.reason
-              }
+            this.fire('confirmation', {
+              response: this.$.dialogModal.closingReason,
+              reason: this.reason
             });
           }
         }
