--- a/app/elements/keys-list-element.html
+++ b/app/elements/keys-list-element.html
@@ -72,6 +72,7 @@
     <paper-fab id="addBtn" icon="add" on-tap="_openAddKeyModal"></paper-fab>
     <key-add-element></key-add-element>
     <key-edit-element key="[[selectedKey]]"></key-edit-element>
+    <dialog-element></dialog-element>
   </template>
 
   <script>
@@ -130,7 +131,7 @@
           },
           sortByTerm: {
             type: String,
-            value: 'id'
+            value: 'default'
           }
         },
         observers: [
@@ -140,11 +141,12 @@
         listeners: {
           'toggleSelectedKey': '_toggleSelectedKey',
           'addKey': '_addKey',
-          'updateSelectedKey': '_updateSelectedKey'
+          'updateSelectedKey': '_updateSelectedKey',
+          'confirmation': '_deleteSelectedResponse'
         },
         _presentedKeysChanged: function(keys, searchTerm, sortByTerm) {
           var presentedKeys = [],
-          searchTerm = searchTerm.toLowerCase();
+            searchTerm = searchTerm.toLowerCase();
 
           var filteredKeys = keys.base.filter(function(key) {
             var id = key.id.toLowerCase();
@@ -223,10 +225,23 @@
           }
         },
         _deleteSelected: function(e) {
-          this.selectedKeys.slice().forEach(function(el, index) {
-            var index = this.keys.indexOf(el);
-            this.splice('keys', index, 1);
-          }, this);
+          this._showDialog({
+            title: this._formatTitle(),
+            body: this._formatBody(),
+            danger: true,
+            reason: "delete_keys"
+          });
+        },
+        _deleteSelectedResponse: function(e) {
+          var reason = e.detail.reason,
+            response = e.detail.response;
+
+          if (response.confirmed && reason == "delete_kays") {
+            this.selectedKeys.slice().forEach(function(el, index) {
+              var index = this.keys.indexOf(el);
+              this.splice('keys', index, 1);
+            }, this);
+          }
         },
         _starSelected: function(e) {
           var selectedKey = this.selectedKey;
@@ -252,6 +267,27 @@
         _addKey: function(e) {
           var key = e.detail.key;
           this.push('keys', key);
+        },
+        _showDialog: function(info) {
+          var dialog = this.querySelector('dialog-element');
+          dialog.title = info.title;
+          dialog.body = info.body;
+          dialog.danger = info.danger;
+          dialog.reason = info.reason;
+          dialog._openDialog();
+        },
+        _formatTitle: function() {
+          return this.selectedKeys.length > 1 ? "Delete Keys" : "Delete Key";
+        },
+        _formatBody: function() {
+          var selectedKeys = this.selectedKeys,
+            names = selectedKeys
+            .map(function(key) {
+              return key.id;
+            })
+            .join(', ');
+
+          return (selectedKeys.length > 1 ? "Are you sure you want to delete these keys: " : "Are you sure you want to delete this key: ") + names + "?";
         }
       });
     })();
