add tooltips to edit btns / tiny fixes

--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -24,9 +24,7 @@
             - Add validation
 
             #### Keys List
-            - Sort by `isDefault`
-            - Provide sorting by name option
-            - Bind to single key page (test animations here)
+            - Update random items and sort again
 
             #### Add Key
             - Set up upload key file
@@ -34,11 +32,11 @@
             - Send the new key to keys list
             - Check name validation
 
-            #### Edit Key
-            - Check name validation
+            #### Networks List
+            - Update random items and sort again
 
             #### Scripts List
-            - Sorting
+            - Update random items and sort again
             - Bind to single key page (test animations here)
 
             #### Plans
@@ -47,8 +45,7 @@
             - Remove jQuery logic in the forms handlers
 
             #### Add Token
-            - Finish all forms handling
-            - Send the new token to the parent element with an event
+            - Fix the token copying in the end
           </script>
         </marked-element>
       </div>
