--- a/app/elements/subscription-item-element.html
+++ b/app/elements/subscription-item-element.html
@@ -18,7 +18,7 @@
       }
 
       .plan-end .plan-action {
-        color: #dd0000;
+        color: #f44336;
       }
 
       .flex-horizontal-with-ratios {
