--- a/app/elements/networks-list-element.html
+++ b/app/elements/networks-list-element.html
@@ -28,9 +28,12 @@
 
     <paper-card heading="Networks">
       <div hidden$="[[!hasNetworks]]" class="card-options">
-        <paper-icon-button icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
+        <paper-tooltip for="searchNetworkBtn" position="top">Toggle Search</paper-tooltip>
+        <paper-icon-button id="searchNetworkBtn" icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
         <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
-        <paper-icon-button hidden$="[[!showDeleteOption]]" on-tap="_deleteSelected" icon="delete"></paper-icon-button>
+
+        <paper-tooltip for="deleteNetworkBtn" position="top">Delete</paper-tooltip>
+        <paper-icon-button id="deleteNetworkBtn" hidden$="[[!showDeleteOption]]" on-tap="_deleteSelected" icon="delete"></paper-icon-button>
       </div>
 
       <div class="card-content">
