--- a/app/elements/scripts-list-element.html
+++ b/app/elements/scripts-list-element.html
@@ -28,14 +28,18 @@
 
     <paper-card heading="Scripts">
       <div hidden$="[[!hasScripts]]" class="card-options">
-        <paper-icon-button icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
+        <paper-tooltip for="searchScriptBtn" position="top">Toggle Search</paper-tooltip>
+        <paper-icon-button id="searchScriptBtn" icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
         <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
 
-        <paper-icon-button hidden$="[[!showRunOption]]" on-tap="_runSelected" icon="schedule"></paper-icon-button>
+        <paper-tooltip for="runScriptBtn" position="top">Run Script</paper-tooltip>
+        <paper-icon-button id="runScriptBtn" hidden$="[[!showRunOption]]" on-tap="_runSelected" icon="schedule"></paper-icon-button>
 
-        <paper-icon-button hidden$="[[!showEditOption]]" on-tap="_editSelected" icon="image:edit"></paper-icon-button>
+        <paper-tooltip for="editScriptBtn" position="top">Edit</paper-tooltip>
+        <paper-icon-button id="editScriptBtn" hidden$="[[!showEditOption]]" on-tap="_editSelected" icon="image:edit"></paper-icon-button>
 
-        <paper-icon-button hidden$="[[!showDeleteOption]]" on-tap="_deleteSelected" icon="delete"></paper-icon-button>
+        <paper-tooltip for="deleteScriptBtn" position="top">Delete</paper-tooltip>
+        <paper-icon-button id="deleteScriptBtn" hidden$="[[!showDeleteOption]]" on-tap="_deleteSelected" icon="delete"></paper-icon-button>
       </div>
 
       <div class="card-content">
