bind all lists items with single pages

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -85,11 +85,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="key-edit-element.html">
 <link rel="import" href="scripts-list-element.html">
 <link rel="import" href="script-item-element.html">
+<link rel="import" href="script-page-element.html">
 <link rel="import" href="script-run-element.html">
 <link rel="import" href="script-add-element.html">
 <link rel="import" href="script-edit-element.html">
 <link rel="import" href="networks-list-element.html">
 <link rel="import" href="network-item-element.html">
+<link rel="import" href="network-page-element.html">
 <link rel="import" href="network-add-element.html">
 <link rel="import" href="login-element.html">
 <link rel="import" href="register-element.html">
