--- a/app/elements/network-page-element.html
+++ b/app/elements/network-page-element.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 
-<dom-module id="key-page-element">
+<dom-module id="network-page-element">
   <template>
     <style include="shared-styles">
       :host {
@@ -13,9 +13,9 @@
       }
     </style>
 
-    <paper-card heading="Single Key">
+    <paper-card heading="Single Network">
       <div class="card-content">
-        <h2>[[key.id]]</h2>
+        <h2>[[network.name]]</h2>
       </div>
     </paper-card>
   </template>
@@ -25,27 +25,27 @@
       'use strict';
 
       Polymer({
-        is: 'key-page-element',
+        is: 'network-page-element',
 
         properties: {
-          key: {
+          network: {
             type: Object,
-            computed: '_computeKey(id)'
+            computed: '_computeNetwork(id)'
           },
           id: {
             type: String
           }
         },
-        _computeKey: function(id) {
+        _computeNetwork: function(id) {
           var current = null;
-          Mist.keys.forEach(function(key) {
-            if (key.id == id) {
-              current = key;
+          Mist.networks.forEach(function(network) {
+            if (network.id == id) {
+              current = network;
             }
           }, this);
           return current;
         }
       });
     })();
-  </script>
+</script>
 </dom-module>
