--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -34,6 +34,7 @@
 
             #### Networks List
             - Update random items and sort again
+            - Fix types
 
             #### Scripts List
             - Update random items and sort again
