--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     // More info: https://visionmedia.github.io/page.js/
 
     // Removes end / from app.baseUrl which page.base requires for production
-    if (window.location.port === '') {  // if production
+    if (window.location.port === '') { // if production
       page.base(app.baseUrl.replace(/\/$/, ''));
     }
 
@@ -87,12 +87,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'add-network';
     });
 
+    page('/networks/:id', function(data) {
+      app.route = 'network';
+      app.params = data.params;
+    });
+
     page('/scripts', function() {
       app.route = 'scripts';
     });
 
     page('/add-script', function() {
       app.route = 'add-script';
+    });
+
+    page('/scripts/:id', function(data) {
+      app.route = 'script';
+      app.params = data.params;
     });
 
     page('/templates', function() {
@@ -141,7 +151,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     // 404
     page('*', function() {
-      app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
+      app.$.toast.text = 'Can\'t find: ' + window.location.href + '. Redirected you to Home Page';
       app.$.toast.show();
       page.redirect(app.baseUrl);
     });
