bootstrap machines components

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -83,6 +83,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="key-page-element.html">
 <link rel="import" href="key-add-element.html">
 <link rel="import" href="key-edit-element.html">
+<link rel="import" href="machines-list-element.html">
+<link rel="import" href="machine-item-element.html">
+<link rel="import" href="machine-page-element.html">
+<link rel="import" href="machine-add-element.html">
 <link rel="import" href="scripts-list-element.html">
 <link rel="import" href="script-item-element.html">
 <link rel="import" href="script-page-element.html">
